--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
   <html>
+    <link rel="stylesheet" href="/css/styles.css">
     <head>
       <meta charset="UTF-8">
-      <title>Montpelier</title>
+      <title>**App title**</title>
     </head>
     <body>
+      <div class="window">
+        <header class="header">
+          <h1>News</h1>
+        </header>
+        <div class="windowContent">
+          <div class="panes">
+            <div class="sidebar">
+              <!--Sidebar content-->
+              <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#news">News</a></li> 
+                <li><a href="#twitch">twitch</a></li>
+              </ul>
+            </div>
+            <div class="mainPane">
+              <!-- Main content goes here -->
+              ya ya ya ya 
+            </div>
+          </div>
+        </div>
+        <footer class="footer">
+          <h2>Footer space copyright blah blah blah</h2>
+        </footer>
+      </div>
     </body>
   </html>
