added site pages
-connected site links
- edited page text and headers

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
     <body>
       <div class="window">
         <header class="header">
-          <h1>News</h1>
+          <h1>**App Title**</h1>
+		  <h2>The Feed</h2>
         </header>
         <div class="windowContent">
           <div class="panes">
             <div class="sidebar">
-              <!--Sidebar content-->c
+              <!--Sidebar content-->
               <ul>
                 <li><a href="#home" onclick="testNotification()">Home</a></li>
-                <li><a href="#news">News</a></li> 
-                <li><a href="#twitch">twitch</a></li>
+                <li><a href="site/news.html">News</a></li> 
+                <li><a href="site/twitch.html">Twitch</a></li>
               </ul>
             </div>
             <div class="mainPane">
