--- a/site/news.html
+++ b/site/news.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
   <html>
-    <link rel="stylesheet" href="/css/styles.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
 	<head>
       <meta charset="UTF-8">
       <title>**App title** - Esports News</title>
     </head>
     <body>
-      <div class="window">
-        <header class="header">
-          <h1>News</h1>
-        </header>
-        <div class="windowContent">
-          <div class="panes">
-            <div class="sidebar">
+    <header class="jumbotron">
+      <h1>News</h1>
+    </header>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 p-4 bg-dark rounded">
               <!--Sidebar content-->
               <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="twitch.html">Twitch</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="twitch.html">Twitch</a></li>
               </ul>
             </div>
-            <div class="mainPane">
+            <div class="col bg-light rounded">
               <!-- Main content goes here -->
-              time for some newsssss 
             </div>
-          </div>
         </div>
-        <footer class="footer">
-          <h2>Footer space copyright 2018 blah corporate blah</h2>
-        </footer>
-      </div>
+    </div>
+    <footer class="footer">
+    </footer>
     </body>
   </html>
