Added some icons and a title

--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
 	</script>
 	<head>
       <meta charset="UTF-8">
-      <title>**App title**</title>
+      <title>Impact</title>
     </head>
     <body>
-    <header class="jumbotron">
-      <h1>Feed</h1>
+    <header class="row justify-content-md-center">
+      <div class="col-lg-2">
+        <img src="media/icon.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px">
+      </div>
+      <div class="col-md-auto">
+        <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width:500px">
+      </div>
     </header>
     <div class="container-fluid">
         <div class="row bg-light">
