--- a/index.html
+++ b/index.html
@@ -49,21 +49,25 @@
         <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width:500px">
       </div>
     </header>
+
+
     <div class="container-fluid">
         <div class="row bg-light">
-            <div class="col-md-2 m-2 p-4 bg-dark rounded">
+            <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
-              <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="site/news.html">News</a></li>
-                <li><a href="site/twitch.html">Twitch</a></li>
+              <ul class="nav nav-pills nav-fill flex-column">
+                <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="site/news.html">News</a></li>
+                <li class="nav-item"><a class="nav-link" href="site/twitch.html">Twitch</a></li>
               </ul>
-            </div>
-            <div class="col rounded" id="feed">
+            </nav>
+            <div class="col-md-10 rounded" id="feed">
                 <!-- Main content goes here -->
             </div>
         </div>
     </div>
+
+
     <footer class="footer">
     </footer>
     </body>
