Fixed the sidebar for the other pages as well

--- a/site/twitch.html
+++ b/site/twitch.html
@@ -14,20 +14,24 @@
     <header class="jumbotron">
       <h1>Streaming Now</h1>
     </header>
+
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 p-4 bg-dark rounded">
+        <div class="row bg-light">
+            <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
-              <ul>
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="news.html">News</a></li>
+              <ul class="nav nav-pills nav-fill flex-column">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
               </ul>
-            </div>
-            <div class="col bg-light rounded">
-              <!-- Main content goes here -->
+            </nav>
+            <div class="col-md-10 rounded">
+                <!-- Main content goes here -->
+                Twitch Integration Coming Soon...
             </div>
         </div>
     </div>
+
     <footer class="footer">
     </footer>
     </body>
