--- a/site/news.html
+++ b/site/news.html
@@ -13,20 +13,24 @@
     <header class="jumbotron">
       <h1>News</h1>
     </header>
+
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 p-4 bg-dark rounded">
+        <div class="row bg-light">
+            <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
-              <ul>
-                  <li><a href="../index.html">Home</a></li>
-                  <li><a href="twitch.html">Twitch</a></li>
+              <ul class="nav nav-pills nav-fill flex-column">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="">News</a></li>
+                <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
               </ul>
-            </div>
-            <div id="newsfeed" class="col bg-light rounded">
-              <!-- Main content goes here -->
+            </nav>
+            <div class="col-md-10 rounded">
+                <!-- Main content goes here -->
+                Specialized news coming soon...
             </div>
         </div>
     </div>
+    
     <footer class="footer">
     </footer>
     </body>
