--- a/site/twitch.html
+++ b/site/twitch.html
@@ -25,9 +25,22 @@
                 <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
               </ul>
             </nav>
-            <div class="col-md-10 rounded">
+            <div class="col-md-10 rounded" id="twitchFeed">
                 <!-- Main content goes here -->
-                Twitch Integration Coming Soon...
+                    <!-- Add a placeholder for the Twitch embed -->
+              <div id="twitch-embed"></div>
+
+              <!-- Load the Twitch embed script -->
+              <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
+              <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+              <script type="text/javascript">
+                new Twitch.Embed("twitch-embed", {
+                  width: 854,
+                  height: 480,
+                  channel: "ninja"
+                });
+              </script>
             </div>
         </div>
     </div>
