Fixed window titles

--- a/site/news.html
+++ b/site/news.html
@@ -7,7 +7,7 @@
 
 	<head>
       <meta charset="UTF-8">
-      <title>**App title** - Esports News</title>
+      <title>Impact</title>
     </head>
     <body onload="displayNewsFeed()">
     <header class="jumbotron">
