--- a/site/twitch.html
+++ b/site/twitch.html
@@ -8,7 +8,7 @@
 
 	<head>
       <meta charset="UTF-8">
-      <title>**App title** - Twitch Esports</title>
+      <title>Impact</title>
     </head>
     <body>
     <header class="jumbotron">
@@ -27,6 +27,7 @@
             </nav>
             <div class="col-md-10 rounded" id="twitchFeed">
                 <!-- Main content goes here -->
+              <!-- Playing around with the Twitch interactive frame (NOT THE API) -->
                     <!-- Add a placeholder for the Twitch embed -->
               <div id="twitch-embed"></div>
 
