Tweaked the navbar images to work together a little better.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     </head>
     <body>
     <header class="row justify-content-md-center">
-      <div class="col-lg-2">
+      <div class="col-lg-3">
         <img src="media/icon.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px">
       </div>
-      <div class="col-md-auto">
+      <div class="col-lg-9 text-center">
         <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width:500px">
       </div>
     </header>
