--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     </head>
     <body>
     <header class="row justify-content-md-center">
-      <div class="col-lg-3">
-        <img src="media/icon.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px">
+      <div class="col-md-2 text-center">
+        <img src="media/icon.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
       </div>
-      <div class="col-lg-9 text-center">
-        <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width:500px">
+      <div class="col-md-10 text-center">
+        <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
       </div>
     </header>
 
