Added padding to the top of the nav buttons.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="row bg-light">
             <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
-              <ul class="nav nav-pills nav-fill flex-column">
+              <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="site/news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="site/twitch.html">Twitch</a></li>
