--- a/site/twitch.html
+++ b/site/twitch.html
@@ -22,7 +22,7 @@
         <div class="row bg-light">
             <nav class="col-md-2 bg-dark fixed">
               <!--Sidebar content-->
-              <ul class="nav nav-pills nav-fill flex-column">
+              <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
