Added new logo, banner, and image unavailable pictures. Also edited files to load these images instead of the old ones

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <body>
     <header class="row justify-content-md-center">
       <div class="col-md-2 text-center">
-        <img src="media/icon.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+        <img src="media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
       </div>
       <div class="col-md-10 text-center">
-        <img src="media/impact.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+        <img src="media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
       </div>
     </header>
 
