added about us page
- nothing fancy just a page with some text at the moment
- added match score api key in new file (not implemented yet)

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="site/news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="site/twitch.html">Twitch</a></li>
+                <li class="nav-item"><a class="nav-link" href="site/about.html">About Us</a></li>
               </ul>
             </nav>
             <div class="col-md-10 rounded" id="feed">
