--- a/site/about.html
+++ b/site/about.html
@@ -4,15 +4,14 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-	<script src="../api/newsAPI.js"></script>
-
+	
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
-    <body onload="displayNewsFeed()">
+    <body>
     <header class="jumbotron">
-      <h1>News</h1>
+      <h1>About Us</h1>
     </header>
 
     <div class="container-fluid">
@@ -21,14 +20,16 @@
               <!--Sidebar content-->
               <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="">News</a></li>
+                <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                <li class="nav-item"><a class="nav-link active" href="">About Us</a></li>
+
               </ul>
             </nav>
             <div class="col-md-10 rounded">
                 <!-- Main content goes here -->
-                Specialized news coming soon...
+                [WIP]
+                Impact an open-source esports news hub. It is the work of 6 Champlain College programmers. Special thanks to the News API and Twitch API for helping to make Impact an easy site to develop and a great source of all things esports. 
             </div>
         </div>
     </div>
