--- a/site/twitch.html
+++ b/site/twitch.html
@@ -26,6 +26,8 @@
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+
               </ul>
             </nav>
             <div class="col-md-10 rounded" id="twitchFeed">
