Add scroll to top button

--- a/site/about.html
+++ b/site/about.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="js/scrollButton.js"></script>
 	
 	<head>
       <meta charset="UTF-8">
@@ -32,6 +33,8 @@
                 Impact an open-source esports news hub. It is the work of 6 Champlain College programmers. Special thanks to the News API and Twitch API for helping to make Impact an easy site to develop and a great source of all things esports. 
             </div>
         </div>
+        
+        <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
     <footer class="footer">
