--- a/site/news.html
+++ b/site/news.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<script src="../api/newsAPI.js"></script>
+    <script src="js/scrollButton.js"></script>
 
 	<head>
       <meta charset="UTF-8">
@@ -31,6 +32,8 @@
                 Specialized news coming soon...
             </div>
         </div>
+        
+        <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
     <footer class="footer">
