--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="api/newsAPI.js"></script>
+    <script src="js/scrollButton.js"></script>
     <script>
       const notifier = require('node-notifier');
       // String
@@ -66,6 +67,8 @@
                 <!-- Main content goes here -->
             </div>
         </div>
+        
+        <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
 
