Created favorites and fixed issue that caused a horizontal scroll bar to appear.

--- a/site/about.html
+++ b/site/about.html
@@ -4,7 +4,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-	
+
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
@@ -20,6 +20,7 @@
               <!--Sidebar content-->
               <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">About Us</a></li>
@@ -29,7 +30,7 @@
             <div class="col-md-10 rounded">
                 <!-- Main content goes here -->
                 [WIP]
-                Impact an open-source esports news hub. It is the work of 6 Champlain College programmers. Special thanks to the News API and Twitch API for helping to make Impact an easy site to develop and a great source of all things esports. 
+                Impact an open-source esports news hub. It is the work of 6 Champlain College programmers. Special thanks to the News API and Twitch API for helping to make Impact an easy site to develop and a great source of all things esports.
             </div>
         </div>
     </div>
