--- a/site/news.html
+++ b/site/news.html
@@ -21,6 +21,7 @@
               <!--Sidebar content-->
               <ul class="nav nav-pills nav-fill flex-column py-3">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
