Adjusted styling of top scroll button.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <!-- Main content goes here -->
             </div>
         </div>
-        
-        <button onclick="toTop()" id="topButton">Top</button>
+
+        <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
     </div>
 
 
