--- a/site/about.html
+++ b/site/about.html
@@ -24,7 +24,7 @@
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
+                <li class="nav-item"><a class="nav-link" href="streams.html">Streams</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">About Us</a></li>
 
               </ul>
