--- a/site/news.html
+++ b/site/news.html
@@ -24,7 +24,7 @@
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
+                <li class="nav-item"><a class="nav-link" href="streams.html">Streams</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
               </ul>
             </nav>
