--- a/site/streams.html
+++ b/site/streams.html
@@ -26,7 +26,7 @@
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
+                <li class="nav-item"><a class="nav-link active" href="">Streams</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
 
               </ul>
