--- a/index.html
+++ b/index.html
@@ -7,42 +7,15 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="api/newsAPI.js"></script>
     <script src="js/scrollButton.js"></script>
-    <script>
-      const notifier = require('node-notifier');
-      // String
-      //notifier.notify('Message');
-
-      // Object
-      /*notifier.notify({
-        title: 'My notification',
-        message: 'Hello, there!'
-      });*/
-
-      //This is temporary code to test notifications
-      function testNotification()
-      {
-        notifier.notify({
-          title: 'Home Link notification',
-          message: 'Hello there!'
-        });
-      }
-
-      //This function fixes the problem if the article has
-      //a broken image file or link.
-      function SRCcheck(image){
-        image.onerror = null;
-        image.src = "media/default.png";
-      }
-
-      printHeadlines();
-
-	</script>
+    <script src="js/index.js"></script>
+	
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
-    <body>
-        <div class="container-fluid">
+    <body onload="loadAnim()">
+        
+		<div class="container-fluid">
             <header class="row justify-content-md-center">
               <div class="col-md-2 text-center">
                 <img src="media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
@@ -53,26 +26,27 @@
             </header>
         </div>
 
+		<div id="loader"></div>
+		
+		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
+			<div class="row bg-light">
+				<nav class="col-md-2 bg-dark fixed">
+				  <!--Sidebar content-->
+				  <ul class="nav nav-pills nav-fill flex-column py-3">
+					<li class="nav-item"><a class="nav-link active" href="">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="site/favorites.html">Favorites</a></li>
+					<li class="nav-item"><a class="nav-link" href="site/news.html">News</a></li>
+					<li class="nav-item"><a class="nav-link" href="site/twitch.html">Twitch</a></li>
+					<li class="nav-item"><a class="nav-link" href="site/about.html">About Us</a></li>
+				  </ul>
+				</nav>
+				<div class="col-md-10 rounded" id="feed">
+					<!-- Main content goes here -->
+				</div>
+			</div>
 
-    <div class="container-fluid">
-        <div class="row bg-light">
-            <nav class="col-md-2 bg-dark fixed">
-              <!--Sidebar content-->
-              <ul class="nav nav-pills nav-fill flex-column py-3">
-                <li class="nav-item"><a class="nav-link active" href="">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="site/favorites.html">Favorites</a></li>
-                <li class="nav-item"><a class="nav-link" href="site/news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="site/twitch.html">Twitch</a></li>
-                <li class="nav-item"><a class="nav-link" href="site/about.html">About Us</a></li>
-              </ul>
-            </nav>
-            <div class="col-md-10 rounded" id="feed">
-                <!-- Main content goes here -->
-            </div>
-        </div>
-
-        <button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
-    </div>
+			<button class="btn btn-success" onclick="toTop()" id="topButton">Top</button>
+		</div>
 
 
     <footer class="footer">
