--- a/site/news.html
+++ b/site/news.html
@@ -5,30 +5,53 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<script src="../api/newsAPI.js"></script>
-    <script src="js/scrollButton.js"></script>
+    <script src="../js/scrollButton.js"></script>
+	<script >
+		var myVar;
+
+		function loadAnim() {
+			myVar = setTimeout(showPage, 250);
+		}
+
+		function showPage() {
+		  document.getElementById("loader").style.display = "none";
+		  document.getElementById("myDiv").style.display = "block";
+		}
+	</script>
+	
 
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
-    <body onload="displayNewsFeed()">
-    <header class="jumbotron">
-      <h1>News</h1>
-    </header>
+    <body onload="loadAnim()">
+        
+		<div class="container-fluid">
+            <header class="row justify-content-md-center">
+              <div class="col-md-2 text-center">
+                <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+              </div>
+              <div class="col-md-10 text-center">
+                <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+              </div>
+            </header>
+        </div>
 
-    <div class="container-fluid">
-        <div class="row bg-light">
-            <nav class="col-md-2 bg-dark fixed">
-              <!--Sidebar content-->
-              <ul class="nav nav-pills nav-fill flex-column py-3">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
-                <li class="nav-item"><a class="nav-link active" href="">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-              </ul>
-            </nav>
-            <div class="col-md-10 rounded">
+		<div id="loader"></div>
+		
+		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
+			<div class="row bg-light">
+				<nav class="col-md-2 bg-dark fixed">
+				  <!--Sidebar content-->
+				  <ul class="nav nav-pills nav-fill flex-column py-3">
+					<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
+					<li class="nav-item"><a class="nav-link active" href="">News</a></li>
+					<li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
+					<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+				  </ul>
+				</nav>
+				<div class="col-md-10 rounded" id="feed">
                 <!-- Main content goes here -->
                 Specialized news coming soon...
             </div>
