changed loading css
- it's blue! (that seems to be our color)

--- a/site/news.html
+++ b/site/news.html
@@ -10,7 +10,7 @@
 		var myVar;
 
 		function loadAnim() {
-			myVar = setTimeout(showPage, 250);
+			myVar = setTimeout(showPage, 900);
 		}
 
 		function showPage() {
@@ -37,7 +37,14 @@
             </header>
         </div>
 
-    <div id="loader"></div>
+    <div id="loader">
+		<div class="cssload-thecube">
+			<div class="cssload-cube cssload-c1"></div>
+			<div class="cssload-cube cssload-c2"></div>
+			<div class="cssload-cube cssload-c4"></div>
+			<div class="cssload-cube cssload-c3"></div>
+		</div>		
+	</div>
 		
 		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
 			<div class="row bg-light">
