--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
             </header>
         </div>
 
-		<div id="loader"></div>
+		<div id="loader">
+			<div class="cssload-thecube">
+				<div class="cssload-cube cssload-c1"></div>
+				<div class="cssload-cube cssload-c2"></div>
+				<div class="cssload-cube cssload-c4"></div>
+				<div class="cssload-cube cssload-c3"></div>
+			</div>		
+		</div>
 		
 		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
 			<div class="row bg-light">
