Incorrect link for streams.html fixed.

--- a/site/news.html
+++ b/site/news.html
@@ -18,14 +18,14 @@
 		  document.getElementById("myDiv").style.display = "block";
 		}
 	</script>
-	
+
 
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
     <body onload="loadAnim()">
-        
+
 		<div class="container-fluid">
             <header class="row justify-content-md-center">
               <div class="col-md-2 text-center">
@@ -43,9 +43,9 @@
 			<div class="cssload-cube cssload-c2"></div>
 			<div class="cssload-cube cssload-c4"></div>
 			<div class="cssload-cube cssload-c3"></div>
-		</div>		
+		</div>
 	</div>
-		
+
 		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
 			<div class="row bg-light">
 				<nav class="col-md-2 bg-dark fixed">
@@ -54,7 +54,7 @@
 					<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
 					<li class="nav-item"><a class="nav-link active" href="">News</a></li>
-					<li class="nav-item"><a class="nav-link" href="twitch.html">Twitch</a></li>
+					<li class="nav-item"><a class="nav-link" href="streams.html">Twitch</a></li>
 					<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
 				  </ul>
 				</nav>
@@ -63,7 +63,7 @@
                 Specialized news coming soon...
             </div>
         </div>
-        
+
         <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
