Moved the loading animation code to seperate files.

--- a/site/news.html
+++ b/site/news.html
@@ -3,22 +3,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/loadAnim.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<script src="../api/newsAPI.js"></script>
+    <script src="../js/loadAnim.js"></script>
     <script src="../js/scrollButton.js"></script>
-	<script >
-		var myVar;
-
-		function loadAnim() {
-			myVar = setTimeout(showPage, 900);
-		}
-
-		function showPage() {
-		  document.getElementById("loader").style.display = "none";
-		  document.getElementById("myDiv").style.display = "block";
-		}
-	</script>
-
 
 	<head>
       <meta charset="UTF-8">
