--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/loadAnim.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <script src="api/newsAPI.js"></script>
     <script src="js/scrollButton.js"></script>
+    <script src="js/loadAnim.js"></script>
     <script src="js/index.js"></script>
-	
+
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
     <body onload="loadAnim()">
-        
+
 		<div class="container-fluid">
             <header class="row justify-content-md-center">
               <div class="col-md-2 text-center">
@@ -32,9 +34,9 @@
 				<div class="cssload-cube cssload-c2"></div>
 				<div class="cssload-cube cssload-c4"></div>
 				<div class="cssload-cube cssload-c3"></div>
-			</div>		
+			</div>
 		</div>
-		
+
 		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
 			<div class="row bg-light">
 				<nav class="col-md-2 bg-dark fixed">
