Added social media buttons to nav. There have blank links, but their direction can be decided later. Addresses issue #25.

--- a/site/about.html
+++ b/site/about.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 
     <script src="js/scrollButton.js"></script>
 
@@ -26,7 +27,12 @@
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="streams.html">Streams</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">About Us</a></li>
-
+              </ul>
+              <ul class="list-inline text-center">
+                <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
               </ul>
             </nav>
             <div class="col-md-10 rounded">
@@ -35,7 +41,7 @@
                 Impact an open-source esports news hub. It is the work of 6 Champlain College programmers. Special thanks to the News API and Twitch API for helping to make Impact an easy site to develop and a great source of all things esports.
             </div>
         </div>
-        
+
         <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
