--- a/site/streams.html
+++ b/site/streams.html
@@ -4,6 +4,7 @@
 
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <script src="js/scrollButton.js"></script>
 
     <!-- Load the Twitch embed script -->
@@ -28,7 +29,12 @@
                 <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link active" href="">Twitch</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-
+              </ul>
+              <ul class="list-inline text-center">
+                <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
+                <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
               </ul>
             </nav>
             <div class="col-md-10 rounded" id="twitchFeed">
@@ -71,7 +77,7 @@
               </script>
             </div>
         </div>
-        
+
         <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
