Revert "Revert "Merge branch 'master' of https://github.com/CSI280-S17/Montpelier""
This reverts commit fbd1be1801d122e8b3f399265f3fabe87c890950.

--- a/site/news.html
+++ b/site/news.html
@@ -3,37 +3,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/loadAnim.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
 	<script src="../api/newsAPI.js"></script>
-    <script src="js/scrollButton.js"></script>
+    <script src="../js/loadAnim.js"></script>
+    <script src="../js/scrollButton.js"></script>
 
 	<head>
       <meta charset="UTF-8">
       <title>Impact</title>
     </head>
-    <body onload="displayNewsFeed()">
-    <header class="jumbotron">
-      <h1>News</h1>
-    </header>
+    <body onload="loadAnim()">
 
-    <div class="container-fluid">
-        <div class="row bg-light">
-            <nav class="col-md-2 bg-dark fixed">
-              <!--Sidebar content-->
-              <ul class="nav nav-pills nav-fill flex-column py-3">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
-                <li class="nav-item"><a class="nav-link active" href="">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="streams.html">Streams</a></li>
-                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-              </ul>
-            </nav>
-            <div class="col-md-10 rounded">
+		<div class="container-fluid">
+            <header class="row justify-content-md-center">
+              <div class="col-md-2 text-center">
+                <img src="../media/logoRedesign.png" alt="Impact Logo" class="img-fluid" style="max-width: 200px;">
+              </div>
+              <div class="col-md-10 text-center">
+                <img src="../media/impactRedesign.png" alt="Impact Logo Lettering" class="img-fluid" style="max-width: 450px;">
+              </div>
+            </header>
+        </div>
+
+    <div id="loader">
+		<div class="cssload-thecube">
+			<div class="cssload-cube cssload-c1"></div>
+			<div class="cssload-cube cssload-c2"></div>
+			<div class="cssload-cube cssload-c4"></div>
+			<div class="cssload-cube cssload-c3"></div>
+		</div>
+	</div>
+
+		<div style="display:none;" id="myDiv" class="animate-bottom container-fluid">
+			<div class="row bg-light">
+				<nav class="col-md-2 bg-dark fixed">
+				  <!--Sidebar content-->
+				  <ul class="nav nav-pills nav-fill flex-column py-3">
+					<li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="favorites.html">Favorites</a></li>
+					<li class="nav-item"><a class="nav-link active" href="">News</a></li>
+					<li class="nav-item"><a class="nav-link" href="streams.html">Twitch</a></li>
+					<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+				  </ul>
+                  <ul class="list-inline text-center">
+                    <li class="list-inline-item" ><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitter-square fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href=""><i class="fab fa-twitch fa-2x"></i></a></li>
+                    <li class="list-inline-item" ><a href=""><i class="fab fa-github-square fa-2x"></i></a></li>
+                  </ul>
+				</nav>
+				<div class="col-md-10 rounded" id="feed">
                 <!-- Main content goes here -->
                 Specialized news coming soon...
             </div>
         </div>
-        
+
         <button onclick="toTop()" id="topButton">Top</button>
     </div>
 
